modified:   game.js 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="blank"></div>
         <button id="start" class="start">START</button>
         <div class="blank"></div>
+        <button id="money" class="money">돈벌기</button>
     </div>
 </body>
 </html>
